cabal-version:      2.4
name:               compressor
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marcelo Lazaroni
maintainer:         lazaronijunior@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable compressor
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   .
    ghc-options: -Wall -Werror -rtsopts
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.0,
        containers,
        bytestring,
        binary,
        process,

