cabal-version:      2.4
name:               compressor
version:            0.1.0.0
author:             Marcelo Lazaroni
maintainer:         lazaronijunior@gmail.com
extra-source-files: CHANGELOG.md

executable compressor
    main-is:          Main.hs
    hs-source-dirs:   .
    ghc-options: -Wall -Werror -rtsopts
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.0,
        containers,
        bytestring,
        binary,
        process,
        timeit,

